fix nowrap

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -539,7 +539,7 @@ hr {
 }
 
 .logo>h1 {
-    padding-left: 2.4em;
+    padding-left: 3em;
     font-size: 1.5em;
     line-height: 2.0em
 }
